force-app/main/default/objects/Vehicle_Value__c/Vehicle_Value__c.object-meta.xml
<CustomObject>
    <label>Vehicle Value</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Vehicle Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>