force-app/main/default/objects/Vehicle_Value__c/fields/Plan_Years__c.field-meta.xml
<CustomField>
    <fullName>Plan_Years__c</fullName>
    <label>Plan Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>