force-app/main/default/objects/Vehicle_Value__c/fields/Unique_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Unique_Vehicle__c</fullName>
    <label>Unique Vehicle</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>