force-app/main/default/objects/Vehicle_Value__c/fields/Vehicle_URL_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_URL_Mapping__c</fullName>
    <label>Vehicle URL Mapping</label>
    <referenceTo>Vehicle_URL_Mapping__c</referenceTo>
    <relationshipLabel>Vehicle Values</relationshipLabel>
    <relationshipName>Vehicle_Values</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>