force-app/main/default/objects/Vehicle_Value__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Vehicle_URL_Mapping__c</columns>
    <columns>Value__c</columns>
    <columns>Unique_Vehicle__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>